--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -89,55 +89,7 @@
         </div>
         <div class="col s12 m4 l4 social-link <%- socialClass %>"><%- partial('_partial/social-link') %></div>
     </div>
-    
-        <!--Live 2D模型加载-->
-    <% if (theme.live2d.enable) { %>
-        <div class="waifu">
-            <!-- 提示框 -->
-            <div class="waifu-tips"></div>
-
-            <!-- 看板娘画布 -->
-            <canvas id="live2d" class="live2d"></canvas>
-            
-            <!-- 工具栏 -->
-            <div class="waifu-tool">
-                <span class="fui-home"></span>
-                <span class="fui-chat"></span>
-                <span class="fui-eye"></span>
-                <span class="fui-user"></span>
-                <span class="fui-photo"></span>
-                <span class="fui-info-circle"></span>
-                <span class="fui-cross"></span>
-            </div>
-            
-        </div>
-        
-        <script src="<%- theme.jsDelivr.url %>/waifu/waifu-tips.js"></script>
-        <script src="<%- theme.jsDelivr.url %>/waifu/live2d.js"></script>
-        
-        <!-- 初始化看板娘，加载 waifu-tips.json -->
-        <script type="text/javascript">
-        /* 可直接修改部分参数 */
-            live2d_settings['hitokotoAPI'] = 'hitokoto.cn';  // 一言 API
-            live2d_settings['modelId'] = 2;                  // 默认模型 ID
-            live2d_settings['modelTexturesId'] = 60;         // 默认材质 ID
-            live2d_settings['modelStorage'] = false;         // 不储存模型 ID
-            live2d_settings['waifuSize'] = '300x267';        // 看板娘大小
-            live2d_settings['waifuTipsSize'] = '285x75';    // 提示框大小
-            live2d_settings['waifuFontSize'] = '15px';       // 提示框字体
-            live2d_settings['waifuToolFont'] = '18px';       // 工具栏字体
-            live2d_settings['waifuToolLine'] = '25px';       // 工具栏行高
-            live2d_settings['waifuToolTop'] = '-30px';       // 工具栏顶部边距
-            live2d_settings['waifuEdgeSide'] = 'right:30';
-            live2d_settings['waifuDraggable'] = 'axis-x';    // 拖拽样式
-            live2d_settings['canTurnToAboutPage'] = false;
-            live2d_settings['canTakeScreenshot'] = false;
-            live2d_settings['homePageUrl'] = '<%- config.url %>';
-            /* 在 initModel 前添加 */
-            initModel("<%- theme.jsDelivr.url %>/waifu/waifu-tips.json")
-        </script>
-        <% } %>
-
+    <script src="https://cdn.jsdelivr.net/gh/stevenjoezhang/live2d-widget@latest/autoload.js"></script>
 </footer>
 
 <div class="progress-bar"></div>
