--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -90,6 +90,8 @@
         <div class="col s12 m4 l4 social-link <%- socialClass %>"><%- partial('_partial/social-link') %></div>
     </div>
     
+    <script src="https://cdn.jsdelivr.net/gh/stevenjoezhang/live2d-widget@latest/autoload.js"></script>
+    
 </footer>
 
 <div class="progress-bar"></div>
